# mopidy-tidal

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  flake.nix  makefile  pyproject.toml
.github/workflows/: integration.yml  integration_test.yml  test.yml
integration_tests/: test_config.py  test_login_hack.py  util.py
integration_tests/config/: basic.conf
mopidy_tidal/: __init__.py  backend.py  ext.conf  library.py  playback.py  playlists.py
mopidy_tidal/gstreamer_proxy/: __init__.py  cache.py  proxy.py  types.py
tests/: test_extension.py  test_library.py  test_login_hack.py  test_lru_cache.py  test_playlist.py  test_playlist_cache.py  test_proxy.py
